# unser-stundenplan

./: .gitignore  ANDROID_SETUP.md  Cargo.toml  IOS_SETUP.md  LICENSE  README.md  biome.json  capacitor.config.ts  dioxus.toml  index.html  package-lock.json  package.json  setup-build-env.sh  vercel.json  vite.config.ts
android/app/: build.gradle
android/app/src/main/java/net/roblillack/stundenplan/: MainActivity.java
android/app/src/main/res/values/: strings.xml
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
scripts/: build.sh  setup-env.sh
src/: App.css  App.tsx  api.rs  api.ts  contants.ts  dates.rs  dates.ts  hooks.ts  index.css  main.rs  main.tsx
ts-version/: index.html  package.json
ts-version/src/: App.css  api.ts
