[package]
name = "unser-stundenplan"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.0-rc.0", features = ["web"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Location",
    "Storage",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "WakeLock",
    "WakeLockSentinel"
] }
dioxus-logger = "0.7.0-rc.0"
